crates/es-fluent-derive/tests/ui/fluent_label_ignored_resource.rs
extern crate es_fluent;

use es_fluent_derive::EsFluentLabel;

#[derive(EsFluentLabel)]
#[fluent(id = "login_error")]
pub enum LoginError {
    InvalidPassword,
}

fn main() {}
